# skim-multifile

./: Cargo.toml  README.md
src/: main.rs  opts.rs  skcustom.rs
