[package]
name = "skim-multifile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "sk-multifile"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0.0-rc.2", features = ["derive"] }
skim = "0.9"
itertools = "0.10"
